fix content div vertical placement
tweaks from the background image slideshow messed up placement of the
content div.  I created a new floater div that ensures the content div
will always be centered vertically

--- a/End2EndPagesCode/css/landing.css
+++ b/End2EndPagesCode/css/landing.css
@@ -6,18 +6,31 @@
 */
 
 /* this are temporary to show placements */
-#contentwrapper {
+.floater {
+	clear:left;
+	position: relative;
+	float:left; 
+	height: 50%; 
+	width: 1px;
+	margin-bottom: -200px;
+}
+
+/*#contentwrapper {
 	margin: 0 auto; 
 	padding-top: 70px;
-}
+	clear: both;
+	position: relative;
+}*/
 
 #content {
 	/*width: 700px;*/
+	clear: left;
+	position: relative;
 	height: 400px; 
 	margin: 0px auto; 
 	/*padding: 20px;*/ 
 	background-color:#000; 
-	opacity:.7; 
+	opacity:.8; 
 	text-align:center; 
 	font-family:Arial, Helvetica, sans-serif; 
 	color: #fff; 
